[gd_scene load_steps=7 format=3 uid="uid://cag1mrccxn3dr"]

[ext_resource type="Script" path="res://Scripts/UI/UI.gd" id="1_785vw"]
[ext_resource type="PackedScene" uid="uid://chlq0ts8fgsp6" path="res://Objects/UI/Pause_menu.tscn" id="2_xfa2w"]
[ext_resource type="Texture2D" uid="uid://cwxr58oe1hlqf" path="res://Assets/UI/Timer.png" id="3_v11kk"]
[ext_resource type="Texture2D" uid="uid://ksfbbtw6anxp" path="res://Assets/UI/Hearts.png" id="4_p814x"]

[sub_resource type="Animation" id="Animation_s183j"]
resource_name = "Timer_ticking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f77jv"]
_data = {
"Timer_ticking": SubResource("Animation_s183j")
}

[node name="Ui" type="CanvasLayer"]
script = ExtResource("1_785vw")

[node name="PauseMenu" parent="." instance=ExtResource("2_xfa2w")]
visible = false

[node name="Time_indicator" type="Sprite2D" parent="."]
position = Vector2(1193, 629)
scale = Vector2(4, 4)
texture = ExtResource("3_v11kk")
hframes = 31

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Time_indicator")
libraries = {
"": SubResource("AnimationLibrary_f77jv")
}

[node name="Health_indicator" type="Sprite2D" parent="."]
position = Vector2(174, 646)
scale = Vector2(3, 3)
texture = ExtResource("4_p814x")
vframes = 11
